2003-07-07  MINAMI Hirokazu  <minami@mistfall.net>

	* fixed a compilation error.
	(Thanks to Hironori SAKAMOTO san)

2003-07-08  Seiichi SATO <ssato@sh.rim.or.jp>

	* Previous fix for sizehint bug still had a problem in
	  x_window_set_normal_hints(). Fixed.
	* Now pixmap_engine does not require *_use_mask key in rc file.
	  (Thanks to Minami Hirokazu san)

2003-07-08  Seiichi SATO <ssato@sh.rim.or.jp>

	* x_imagelib_imlib.c: fixed a small bug in x_imagelib_load_file().

2003-07-08  Seiichi SATO <ssato@sh.rim.or.jp>

	* My fix for sizehints bug (2002-08-29) seems not to be enough. Fixed.

2003-07-06  Araki Ken  <arakiken@users.sf.net>

	* Cursor character was not correctly drawn in window unfocused. Fixed.

2003-07-06  Seiichi SATO <ssato@sh.rim.or.jp>

	* pixmap_engine.c: minor cleanup

2003-07-06  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.c, ml_line.c: Optimized the way of redrawing.

2003-07-05  Seiichi SATO <ssato@sh.rim.or.jp>

	* fixed a small bug in pixmap_engine.c

2003-07-05  MINAMI Hirokazu  <minami@mistfall.net>

	* x_imagelib_gdk.c:x_imagelib_load_file() now retuens None as "mask"
	when there's no alpha plane in the specified image file.	

2003-07-05  Seiichi SATO <ssato@sh.rim.or.jp>

	* Updated pixmap_engine since x_imagelib_load_file() was changed.

2003-07-05  MINAMI Hirokazu  <minami@mistfall.net>

	* Changed API of the x_imagelib_load_file() function.

2003-07-03 Araki Ken <arakiken@users.sf.net>

	* Modified a little README,man/mlterm.1,doc/ja/README.ja

2003-07-01 Araki Ken <arakiken@users.sf.net>

	* Updated tool/mlconfig/po/de.po.
	  (Thanks to Mike Fabian)

2003-07-01 Araki Ken <arakiken@users.sf.net>

	* Updated tool/mlconfig/po/zh_TW.po.
	  (Thanks to Ambrose Li)

2003-06-30 Araki Ken <arakiken@users.sf.net>

	* Compiled mlcc and pixmap_engine by default.
	* Added sample3 description to doc/en/README.ja and man/mlterm.1.
	* Added sample3 to mc_sb_view.c.

2003-06-29 Araki Ken <arakiken@users.sf.net>
